fixed some bad characters

--- a/chap1.tex
+++ b/chap1.tex
@@ -44,13 +44,13 @@ early Industrial Revolution.
 Robotic cars are sometimes situated as
 the next step for robots after the factory, their final emergence into
 the real world having conquered the factory floor.\footnote{See for
-  example “Robot Vehicles” in RobotWorx \cite{robotworx}, which describes automated cars as having the sensors
+  example ``Robot Vehicles'' in RobotWorx \cite{robotworx}, which describes automated cars as having the sensors
   industrial robots have had for many years.} But just what the
 processes of standardization, mechanization, and automation (or
-“automatization”) have done to the factory, and to laborers in it, is
+``automatization'') have done to the factory, and to laborers in it, is
 not clearly understood among many who write about autonomous cars. Within this
-forgotten history—which is substituted for by an imagined person-less
-factory that does not exist in the real world—there are even lessons to be
+forgotten history---which is substituted for by an imagined person-less
+factory that does not exist in the real world---there are even lessons to be
 learned by the research community. This past is relevant, perhaps
 more than ever, to the future of transportation.
 
@@ -67,8 +67,8 @@ all parts of the process would occur without human intervention.
 In reality, the process both increased efficiency and decreased the costs
 of production, so much so that the same basic machinery is still in
 use today in some smaller milling operations.\cite{wyegrist} None of his individual
-inventions—which he lists as the elevator, ``conveyer,'' hopper-boy,
-drill, and descender in his 1795 miller's guide—was a particularly
+inventions---which he lists as the elevator, ``conveyer,'' hopper-boy,
+drill, and descender in his 1795 miller's guide---was a particularly
 groundbreaking achievement, but what Evans did was place these devices
 in succession so as to allow continuous production, and the
 elimination of many slow human jobs that degraded the quality of the
@@ -109,20 +109,22 @@ the development of the so-called “American system” of interchangeable
 parts, through which a gradual increase in mechanization would seem to
 continue, driven by the tight tolerances necessary for this production
 method. And yet armorers and managers at Harper's Ferry resisted the
-mechanization of their craft,\footnote{Blanchard's
-  many automatic machines for making
-gunstocks were of particular importance,\cite{roesmithHarpers} but a wide variety of
-machinery was implemented in the gun-making process at Harper's Ferry. Most of these machines still
-required significant human labor. Nash's barrel-turning machine in part mechanized the production of
-barrels of standardized dimensions: it consisted of a lathe on a
-wooden frame, with human-operated props to hold the barrel in place.\cite{roesmithHarpers}
-The worker also had to continually measure the barrel with a caliper,
-and adjust the device's chisel appropriately.\cite{roesmithHarpers} This gradual
-implementation of mechanized labor was continued in further machines
-produced by Hall. His straight-cutting machine, an early version of a
-milling machine, had as its distinctive feature the ability to be
-tended by ``common hands'' without a loss of
-accuracy.\cite{roesmithHarpers}, and while certain competencies were
+mechanization of their craft,\footnote{Blanchard's many automatic
+  machines for making gunstocks were of particular
+  importance,\cite{roesmithHarpers} but a wide variety of machinery
+  was implemented in the gun-making process at Harper's Ferry. Most of
+ these machines still required significant human labor. Nash's
+ barrel-turning machine in part mechanized the production of barrels
+ of standardized dimensions: it consisted of a lathe on a wooden
+ frame, with human-operated props to hold the barrel in
+ place.\cite{roesmithHarpers} The worker also had to continually
+ measure the barrel with a caliper, and adjust the device's chisel
+ appropriately.\cite{roesmithHarpers} This gradual implementation of
+ mechanized labor was continued in further machines produced by Hall.
+ His straight-cutting machine, an early version of a milling machine,
+ had as its distinctive feature the ability to be tended by ``common
+ hands'' without a loss of
+accuracy.\cite{roesmithHarpers}}, and while certain competencies were
 transferred from the skilled worker
 to the technical apparatus, human oversight and operation was still
 integral to the production of weaponry using the new technology. It was
@@ -137,15 +139,15 @@ The same exchange of competencies characterized Ford's assembly line
 production as well, which is cited by David Hounshell as the rise of
 true mass production in America.\cite{hounshell} Ford's factory developed fixtures
 and gauges, designed to allow for use by unskilled machine tenders. As Donald
-Norman writes in Things that Make us Smart—itself, reminiscent of Ed
+Norman writes in Things that Make us Smart---itself, reminiscent of Ed
 Hutchins's cognitive anthropology and work on distributed cognition
-systems—“the world remembers things for us, just by being
-there.”\cite{normanThings} But while the gauge simplifies the
+systems---``the world remembers things for us, just by being
+there.''\cite{normanThings} But while the gauge simplifies the
 assurance  of quality, it does not
 automate it: it simply changes the effort from a more complex judgment
 of quality and measurement to a simpler one. While he instituted the
 five-dollar day to attempt to solve labor problems at the factory, and
-compensate laborers for becoming part of the “production machine,”
+compensate laborers for becoming part of the ``production machine,''
 Ford also attracted a wide variety of well-educated skilled mechanics
 to his automobile plants.\cite{hounshell} Like Evans, Blanchard, Hall, and others
 before them, these mechanics applied their skills to design machines,
@@ -154,10 +156,10 @@ of the assembly line laborer was displaced into standardized tools and
 fixtures, built into these technologies by the labor of skilled
 machinists and designers.
 
-Meanwhile, Taylorism in factories created “new managerial
-functions” performed by “new classes of people with new titles and
-more clearly specified responsibilities.”\cite{aitken} A focus on the
-people—who are they? where are they? what are they doing?—shows that
+Meanwhile, Taylorism in factories created ``new managerial
+functions'' performed by ``new classes of people with new titles and
+more clearly specified responsibilities.''\cite{aitken} A focus on the
+people---who are they? where are they? what are they doing?---shows that
 one of the fundamental and enduring characteristics of Taylor's
 system, the expansion of management roles and the further division of
 labor, is not about mechanical automation but about new and altered
@@ -184,12 +186,12 @@ increase profits because of the volume of highly skilled labor needed
 to keep the machines operating.\cite{nyeAmericas} The development of NC machines
 proceeded with a specific interest in eliminating skilled workers, but
 the jobs that disappeared were largely unskilled or semi-skilled
-laborers.\cite{nyeAmericas} And while Norbert Weiner, in his 1950 book The Human Use of
-Human Beings, prophesied the end of “deadly uninteresting” jobs, which
+laborers.\cite{nyeAmericas} And while Norbert Weiner, in his 1950 book \emph{The Human Use of
+Human Beings}, prophesied the end of ``deadly uninteresting'' jobs, which
 would be mechanized within 20 years, such changes have still not
 totally come to pass.\cite{nyeAmericas} To compound the problem, new industries of
-skilled workers—record-and-playback machine designers, and NC machine
-programmers—sprang up to furnish factories with their tools.
+skilled workers---record-and-playback machine designers, and NC machine
+programmers---sprang up to furnish factories with their tools.
 
 %% Nye cites p 159, 162, 164, 161
 
@@ -199,19 +201,19 @@ wrest control of the production of components from those closest to
 handling them and concentrating it in the hands of management. The Air Force's Integrated Computer-Aided Manufacturing program (ICAM)
 brings to light further complexities in the story of the automated
 factory: ICAM attempted to aid shop floor automation by automating certain
-management functions, “to try to reduce the enormous indirect costs
+management functions, ``to try to reduce the enormous indirect costs
 that have resulted from the effort to reduce labor costs and remove
-power and judgment from the shop floor,” costs that have continued to
+power and judgment from the shop floor,'' costs that have continued to
 dog new rationalization strategies.\cite{nobleForces} ICAM, like the mythical
-ouroboros, sought to offer automation as the “solution to the problems
-generated by automation,” providing automated scheduling functions,
-inventory control, and design tools to “provide better management
-control” and “free management from excessive routine duties to do
-creative work”—the creative work that the management had attempted to
+ouroboros, sought to offer automation as the ``solution to the problems
+generated by automation,'' providing automated scheduling functions,
+inventory control, and design tools to ``provide better management
+control'' and ``free management from excessive routine duties to do
+creative work''---the creative work that the management had attempted to
 place in their own hands, in the first place, through earlier
 processes of rationalization.\cite{nobleForces}  Automation, Noble's ICAM example shows,
-can be used both to routinize work—for the manual laborer—and to
-eliminate the routine in favor of the creative—for managers and newly
+can be used both to routinize work---for the manual laborer---and to
+eliminate the routine in favor of the creative---for managers and newly
 generated classes of creative workers. 
 
 %% Noble cites 330, 330
@@ -224,7 +226,7 @@ factories as a result of automation.''\cite{dieboldNew}
 So we come to our first of many contradictions at the heart of
 automated vehicle research. Their promise:
 to provide to us a greater measure of creativity in the act of
-driving, to remove some of the “menial” and routine tasks of manual
+driving, to remove some of the ``menial'' and routine tasks of manual
 control in favor of strategic decision-making. In this analogy, the
 driver goes from being the manual laborer to the creative manager. But
 despite a focus on relieving tedium, this is not the way these systems
