--- a/main.bib
+++ b/main.bib
@@ -42,7 +42,7 @@
    key = "robot vehicles",
    author = "",
    title = "{R}obot {V}ehicles",
-   journal = "{R}obot{W}orx"
+   journal = "{R}obot{W}orx",
    month = "Accessed December 11",
    year = "2014",
 }
@@ -51,7 +51,7 @@
    key = "timeline",
    author = "",
    title = "{T}imeline",
-   journal = "{W}ye {G}rist {M}ill website"
+   journal = "{W}ye {G}rist {M}ill website",
    month = "Accessed December 11",
    year = "2014",
 }
@@ -79,7 +79,7 @@
 @UNPUBLISHED{roesmithYankee,
    author = "Merritt Roe Smith",
    title = "{Y}ankee {A}rmorers and the {U}nion {W}ar {M}achine",
-   note = "(Author's draft, July 1, 2014),
+   note = "(Author's draft, July 1, 2014)",
 }
 
 @BOOK{roesmithHarpers,
@@ -133,7 +133,7 @@
 @INBOOK{evansMillguide,
    author = "Oliver Evans",
    title = "{T}he {Y}oung {M}ill-{W}right and {M}iller's {G}uide",
-   publisher = "Lea & Blanchard",
+   publisher = "Lea \& Blanchard",
    address = "Philadelphia",
    edition = "12th",
    year = "1848",
