--- a/chap2.tex
+++ b/chap2.tex
@@ -26,6 +26,13 @@ volume
 ---object identification work in machine vision is slowly progressing,
 but then we hit the above problems of VV\&T for such models (2 p)
 
+2.5??) Worth bringing in questions of terminology, ``intelligence''
+etc. and the necessary caution in ascribing them to tech; we can look
+and see that the ``intelligence'' in action here is really very
+different than what we usually mean when we use that term
+(human-centric)
+--so does knowing this reality change what we want to see? (couple of p)
+
 3) situate the moonshot approach (which may actually be easier in some
 senses but less socially acceptable) and the mixed approach in a way
 that does not support a teleology of autonomous vehicle development
