--- a/main.bib
+++ b/main.bib
@@ -73,7 +73,6 @@
    number = 6,
    month = "Nov/Dec",
    year = 1953,
-   pages = "63-64",
 }
 
 @UNPUBLISHED{roesmithYankee,
@@ -137,7 +136,6 @@
    address = "Philadelphia",
    edition = "12th",
    year = "1848",
-   pages = "203",
 }
 
 @BOOK{coxe,
@@ -155,6 +153,113 @@
    address = "Baltimore, MD",
    year = "2010",
 }
+
+@BOOK{mccorduck,
+   author = "Pamela McCorduck",
+   title = "{M}achines {W}ho {T}hink: {A} {P}ersonal {I}nquiry into the {H}istory and {P}rospects of {A}rtificial {I}ntelligence",
+   publisher = "A K Peters via Books24x7",
+   year = "2004",
+}
+
+@INCOLLECTION{patricklin,
+   author = "Patrick Lin",
+   title = "{I}ntroduction",
+   editor = "Patrick Lin, Keith Abney, and George A. Bekey",
+   booktitle = "{R}obot {E}thics: {T}he {E}thical and {S}ocial {I}mplications of {R}obotics",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = 2012,
+}
+
+@BOOK{shelley,
+   author = "Mary Shelley",
+   title = "{F}rankenstein; or, {T}he {M}odern {P}rometheus",
+   publisher = "Sever, Francis, & Co.",
+   address = "Boston, MA",
+   year = "1869",
+}
+
+@ARTICLE{riskinDuck,
+   author = "Jessica Riskin",
+   title = {The Gnats and Gnus Document Preparation System},
+   journal = {\mbox{G-Animal's} Journal},
+   year = 1986,
+   volume = 41,
+   number = 7,
+   pages = "73+",
+   month = jul,
+   note = "This is a full ARTICLE entry",
+}
+
+@BOOK{richardhills,
+   author = "Richard L. Hills",
+   title = "{P}ower {F}rom the {W}ind: {A} {H}istory of {W}indmill {T}echnology",
+   publisher = "Cambridge University Press",
+   address = "Cambridge, UK",
+   year = "1996",
+}
+
+@ARTICLE{ottomayr,
+   author = "Otto Mayr",
+   title = "{M}axwell and the {O}rigins of {C}ybernetics",
+   journal = "Isis",
+   year = "1971",
+   number = 62,
+   volume = 4,
+   pages = "424--444",
+}
+
+@BOOK{russellnorvig,
+   author = "Stuart J. Russell and Peter Norvig",
+   title = "{A}rtificial {I}ntelligence: {A} {M}odern {A}pproach",
+   publisher = "Prentice Hall",
+   address = "Upper Saddle River, New Jersey",
+   edition = "Second",
+   year = "2003",
+}
+
+@TECHREPORT{wienerMainIdeas,
+   author = "Norbert Wiener",
+   title = "{T}he {M}ain {I}deas of {C}ybernetics",
+   institution = "From the Norbert Wiener Papers, MC 22. Box 31: Folder 798",
+   type = "Lecture",
+   address = "Institute Archives and Special Collections, MIT Libraries, Cambridge, MA",
+   year = "ca. 1956",
+}
+
+@TECHREPORT{dartmouthconf,
+   author = "J. McCarthy, M. L. Minksy, N. Rochester, C. E. Shannon",
+   title = "{A} {P}roposal for the {D}artmouth {S}ummer {R}esearch {P}roject on {A}rtificial {I}ntelligence",
+   institution = "From the Norbert Wiener Papers, MC 22. Box 31: Folder 798",
+   year = "1955",
+   month = "August 31",
+}
+
+@INCOLLECTION{winston,
+   author = "Patrick H. Winston",
+   title = "{A}rtificial {I}ntelligence: {A} {P}erspective",
+   editor = "W. Eric L. Grimson and Ramesh S. Patil",
+   booktitle = "{AI} in the 1980s and {B]eyond",
+   pages = "1--10",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = 1987,
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
