--- a/cover.tex
+++ b/cover.tex
@@ -82,7 +82,7 @@
 % This is the department committee chairman, not the thesis committee
 % chairman.  You should replace this with your Department's Committee
 % Chairman.
-\chairman{Arthur C. Smith}{Chairman, Department Committee on Graduate Theses}
+\chairman{T. L. Taylor}{Department Chair, Director of Graduate Studies}
 
 % Make the titlepage based on the above information.  If you need
 % something special and can't use the standard form, you can specify
