--- a/intro.tex
+++ b/intro.tex
@@ -30,3 +30,41 @@ and that these can be traced through the histories and current
 discourses of the fields involved, and lead us to expect very
 different social/cultural impacts (2 p)
 
+
+Note: I set out to plumb the depths of the cultural and social
+implications of self-driving vehicle technology. In my naivete, I
+conceived of driverless cars as just-another-AI-technology, something
+understood and on which a meaningful ideological critique could be
+based. But as I researched, I discovered that not only did
+self-driving cars lack a fixed social meaning---their uses and
+contexts still up for grabs---but the technology itself is unspecified
+in profound and important ways. An apt lesson for an early researcher,
+here was a thing which had not reached the stage of becoming, in
+Latour's parlance, a ``black box,'' despite the media's treatment of
+it as such. Below the surface, controversy bubbles. The deeper one
+goes, the more ambivalent the mess becomes. Certain claims seem
+constant across projects, but others differ wildly. Their stated goals
+often seem subtly off-set from their assumptions and end-products. And
+even more fundamentally, the idea of the ``self-driving'' vehicle,
+where the human does nothing at all, is hardly a self-evident one.
+Turning up other research paths---and indeed, numerous historical
+counterexamples---made it painfully clear that the story I wanted was
+not the story I could tell. The time had not yet come when the social
+and cultural impacts could reasonably be predicted in a cohesive way.
+But, as I think such things are absolutely fundamental to the way we
+should think about new technologies, I am unwilling to drop them
+entirely. So what follows is a patchwork, though, I hope, an artful
+one. Several technological possibilities produce several visions of
+what society might be, but each will ultimately have to come into
+contest not only with physical reality, but the social realms of law,
+technology, and public acceptance. Rather than taking the visions as
+my starting point, I must dig deeper: putting them in the context of
+historical fields and precedents, and shining light through their gaps
+for all to see. And that is what I hope this project has become, a
+deep look into the ideologies and rhetorics of the self-driving car,
+one which not only touches upon what society might be like once these
+vehicles are common, but what different models for these vehicles
+exist, and what their public face might be if different people wrote,
+and different ideas guided, their stories. Stories have power, and it
+beehoves me, on finding the stories we tell to be so deeply one-sided,
+to try to rebalance the narrative.
